feat: finalized header

--- a/index.html
+++ b/index.html
@@ -36,15 +36,19 @@
             <div class="action-btns">
                 <button class="order-btn">Order Now</button>
                 <button class="learn-btn">Learn More</button>
-            </div>           
+            </div>
+            <div class="arrow-btns">
+                <button class="arrow-left-btn"><img class="arrow-img" src="./resources/left-arrow.svg" alt="Left Arrow"></button>
+                <button class="arrow-right-btn"><img class="arrow-img" src="./resources/right-arrow.svg" alt="Right Arrow"></button>
+            </div>       
+        </div>
+        <div class="multi-dots">
+            <button><div class="circle"></div></button>
+            <button><div class="circle inactive"></div></button>
+            <button><div class="circle inactive"></div></button>
         </div>
     </header>
-    <div class="multi-dots">
-        <div class="circle"></div>
-        <div class="circle inactive"></div>
-        <div class="circle inactive"></div>
-    </div> 
-    
+
     <section class="car-cards-container">
         <!-- Model Y -->
         <div class="car-cards-carousel">
@@ -116,14 +120,14 @@
 
     <footer>
         <ul class="footer-items">
-            <li><a>Tesla &copy 2026</a></li>
-            <li><a>Privacy & Legal</a></li>
-            <li><a>Vehicle Recalls</a></li>
-            <li><a>Contact</a></li>
-            <li><a>News</a></li>
-            <li><a>Get Updates</a></li>
-            <li><a>Locations</a></li>
-            <li><a>Learn</a></li>
+            <li><a href="https://www.tesla.com/about" target="_blank">Tesla &copy 2026</a></li>
+            <li><a href="https://www.tesla.com/legal" target="_blank">Privacy & Legal</a></li>
+            <li><a href="https://service.tesla.com/vin-recall-search" target="_blank">Vehicle Recalls</a></li>
+            <li><a href="https://www.tesla.com/contact" target="_blank">Contact</a></li>
+            <li><a href="https://www.tesla.com/blog" target="_blank">News</a></li>
+            <li><a href="https://www.tesla.com/updates" target="_blank">Get Updates</a></li>
+            <li><a href="https://www.tesla.com/findus/list" target="_blank">Locations</a></li>
+            <li><a href="https://www.tesla.com/learn" target="_blank">Learn</a></li>
         </ul>
     </footer>
 
