feat: added circle selectors for car cards

--- a/index.html
+++ b/index.html
@@ -116,6 +116,17 @@
                 </div>
             </div>
         </div>
+        <div class="right-arrow-cards">
+            <button class="arrow-left-btn"><img class="arrow-img" src="./resources/left-arrow.svg" alt="Left Arrow"></button>
+            <button class="arrow-right-btn"><img class="arrow-img" src="./resources/right-arrow.svg" alt="Right Arrow"></button>
+        </div> 
+
+        <div class="multi-dots-dark">
+            <button><div class="circle dark-circ"></div></button>
+            <button><div class="circle dark-circ inactive-dark"></div></button>
+            <button><div class="circle dark-circ inactive-dark"></div></button>
+            <button><div class="circle dark-circ inactive-dark"></div></button>
+        </div>
     </section>
 
     <footer>
