--- a/index.html
+++ b/index.html
@@ -38,15 +38,25 @@
                 <button class="learn-btn">Learn More</button>
             </div>
             <div class="arrow-btns">
-                <button class="arrow-left-btn"><img class="arrow-img" src="./resources/left-arrow.svg" alt="Left Arrow"></button>
-                <button class="arrow-right-btn"><img class="arrow-img" src="./resources/right-arrow.svg" alt="Right Arrow"></button>
+                <div class="arrow-left-btn">
+                    <button><img class="arrow-img" src="./resources/left-arrow.svg" alt="Left Arrow"></button>
+                </div>
+                <div class="arrow-right-btn">
+                    <button><img class="arrow-img" src="./resources/right-arrow.svg" alt="Right Arrow"></button>
+                </div>
+            </div>
+            <div class="pause">
+                <button>
+                    <img src="./resources/pause.svg" alt="Pause/Play">
+                </button>
+            </div>
+            <div class="multi-dots">
+                <button><div class="circle"></div></button>
+                <button><div class="circle inactive"></div></button>
+                <button><div class="circle inactive"></div></button>
             </div>       
         </div>
-        <div class="multi-dots">
-            <button><div class="circle"></div></button>
-            <button><div class="circle inactive"></div></button>
-            <button><div class="circle inactive"></div></button>
-        </div>
+        
     </header>
 
     <section class="car-cards-container">
@@ -116,13 +126,18 @@
                 </div>
             </div>
         </div>
-        <div class="right-arrow-cards">
-            <button class="arrow-left-btn"><img class="arrow-img" src="./resources/left-arrow.svg" alt="Left Arrow"></button>
-            <button class="arrow-right-btn"><img class="arrow-img" src="./resources/right-arrow.svg" alt="Right Arrow"></button>
+        <div class="cards-arrow-btn">
+            <div class="cards-arrow-btn-left">
+                <button><img class="arrow-img" src="./resources/left-arrow.svg" alt="Left Arrow"></button>
+            </div>
+            <div class="cards-arrow-btn-right">
+                <button><img class="arrow-img" src="./resources/right-arrow.svg" alt="Right Arrow"></button>
+            </div>
         </div> 
 
         <div class="multi-dots-dark">
             <button><div class="circle dark-circ"></div></button>
+            <button><div class="circle dark-circ inactive-dark"></div></button>
             <button><div class="circle dark-circ inactive-dark"></div></button>
             <button><div class="circle dark-circ inactive-dark"></div></button>
             <button><div class="circle dark-circ inactive-dark"></div></button>
